--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dapla-toolbelt-automation"
-version = "0.0.0"
+version = "0.0.1"
 description = "Dapla Toolbelt Automation"
 authors = [{ name = "Dapla Developers", email = "dapla-platform-developers@ssb.no" }]
 maintainers = [{ name = "Statistics Norway, Data enablement Department (724)" }]
@@ -80,6 +80,25 @@ warn_unreachable = true
 pretty = true
 show_column_numbers = true
 show_error_context = true
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+# Silence missing stubs for Google Cloud libs
+module = [
+    "gcsfs.*",
+    "fsspec.*",
+    "responses.*",
+    "tomli.*",
+    "google.*",
+    "google.cloud.*",
+    "tests.*"
+]
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["tests.*"]
+disallow_untyped_calls = false
+
 
 [tool.ruff]
 force-exclude = true  # Apply excludes to pre-commit
@@ -97,16 +116,27 @@ extend-exclude = [
 
 # Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
 [tool.ruff.lint]
-select = ["ALL"]
+select = [
+    "A",   # prevent using keywords that clobber python builtins
+    "ANN", # check type annotations
+    "B",   # bugbear: security warnings
+    "D",   # documentation
+    "E",   # pycodestyle
+    "F",   # pyflakes
+    "ISC", # implicit string concatenation
+    "I",   # sort imports
+    "UP",  # alert you when better syntax is available in your python version
+    "RUF", # the ruff developer's own rules
+]
 ignore = [
-    "ANN202", # Don't require return type annotation for private functions.
+    "ANN101", # Supress missing-type-self.
+    "ANN102", # Supress missing-type-cls.
+    "ANN202", # Don't requiere return type annotation for private functions.
     "ANN401", # Allow type annotation with type Any.
     "D100",   # Supress undocumented-public-module. Only doc of public api required.
-    "FBT001", # Allow boolean positional arguments in a function.
-    "FBT002", # Allow boolean default positional arguments in a function.
     "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
     "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
-    "PLR2004", # Allow to compare with unnamed numerical constants.
+    "UP007",  # ADDED MANUALLY - makes it possible to use the Optional[] syntax
 ]
 
 [tool.ruff.lint.isort]
